--- a/providers/specialized/wireshark.yaml
+++ b/providers/specialized/wireshark.yaml
@@ -8,7 +8,7 @@ provider:
   type: "network"
   platforms: ["linux", "macos", "windows"]
   executable: "tshark"  # Main executable for availability detection
-  capabilities: ["logs", "info", "search", "list", "upgrade", "version"]
+  capabilities: ["logs"]
 
 actions:
   logs:
@@ -18,27 +18,4 @@ actions:
       interface: "any"
       packet_count: "100"
 
-  info:
-    description: "Analyze captured packets"
-    template: "tshark -r /tmp/capture-{{metadata.name}}.pcap -Y 'tcp.port == {{sai_port()}}'"
 
-  search:
-    description: "Filter and search packets"
-    template: "tshark -i {{interface}} -f 'host {{target_host}} and port {{sai_port()}}'"
-    variables:
-      interface: "any"
-      target_host: "localhost"
-
-  list:
-    description: "Decode protocols"
-    template: "tshark -r /tmp/capture-{{metadata.name}}.pcap -V"
-
-  upgrade:
-    description: "Export to file"
-    template: "tshark -i {{interface}} -w /tmp/capture-{{metadata.name}}.pcap -f 'port {{sai_port()}}'"
-    variables:
-      interface: "any"
-
-  version:
-    description: "Show Wireshark/tshark version"
-    template: "tshark --version"
